exports[`GetArticle should get the specified article & associated replies from ID 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "references": Array [
        Object {
          "type": "LINE",
        },
      ],
      "replies": Array [
        Object {
          "versions": Array [
            Object {
              "reference": "barbar",
              "text": "bar",
              "type": "NOT_ARTICLE",
            },
          ],
        },
      ],
      "replyCount": 1,
      "replyRequestCount": 1,
      "requestedForReply": true,
      "text": "Lorum ipsum",
    },
  },
}
`;

exports[`GetReply should get the specified reply & associated articles from ID 1`] = `
Object {
  "data": Object {
    "GetReply": Object {
      "articles": Array [
        Object {
          "text": "Lorum ipsum",
        },
      ],
      "versions": Array [
        Object {
          "reference": "barbar",
          "text": "bar",
          "type": "NOT_ARTICLE",
        },
      ],
    },
  },
}
`;

exports[`relatedArticle filter test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [],
      },
    },
  },
}
`;

exports[`relatedArticle no-param test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WyJiYXNpYyNmb28zIl0=",
            "node": Object {
              "doc": Object {
                "id": "foo3",
                "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
              },
              "score": 0.8696344,
            },
          },
          Object {
            "cursor": "WyJiYXNpYyNmb28yIl0=",
            "node": Object {
              "doc": Object {
                "id": "foo2",
                "text": "Lorum ipsum Lorum ipsum",
              },
              "score": 0.7911257,
            },
          },
        ],
      },
    },
  },
}
`;

exports[`relatedArticle sorting test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WzAuNzkxMTI1NywiYmFzaWMjZm9vMiJd",
            "node": Object {
              "doc": Object {
                "id": "foo2",
                "text": "Lorum ipsum Lorum ipsum",
              },
              "score": 0.7911257,
            },
          },
          Object {
            "cursor": "WzAuODY5NjM0NCwiYmFzaWMjZm9vMyJd",
            "node": Object {
              "doc": Object {
                "id": "foo3",
                "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
              },
              "score": 0.8696344,
            },
          },
        ],
      },
    },
  },
}
`;
